--- a/style.css
+++ b/style.css
@@ -1,254 +1,254 @@
 body {
-   font-family: Arial, sans-serif;
-   background-color: #fafafa52;
-   margin: 0;
-   padding: 0;
-}
-header {
-
-
-   background-color: rgb(10, 8, 8);
-
-
-   color: rgb(170, 100, 100);
-
-
-   padding: 10px 0;
-
-
-   position: fixed;
-
-
-   width: 100%;
-
-
-   top: 0;
-   z-index: 100;
-   display: flex;
-   align-items: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+  position: relative;
 }
 
 
+
+.topo {
+  background-color: rgb(255, 244, 244);
+  display: flex;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+}
+
+#logo {
+  background-color: rgb(5, 4, 4);
+}
+
+
+#logo-img {
+  padding: 10px;
+}
 
 .navbar {
-   max-width: 800px;
-   margin-left: auto;
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
+  max-width: 800px;
+  margin-left: auto;
+  margin-top: 0px;
+  display: flex;
+  justify-content: space-between;
 }
 
-
-.logo {
-   font-size: 50px;
-   font-weight: bold;
-   border-radius: 7px;
-   margin-left: 100px; 
+.navbar:hover {
+  font-style: oblique;
 }
-
-
-.logo-img {
-   width: 100px;
-   height: auto;
-   border-radius: 12px;
-}
-
 
 .nav-links {
-   list-style: none;
-   padding: 0;
-   margin: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 
 .nav-links li {
-   display: inline;
-   margin-right: 100px;
+  display: inline;
+  margin-right: 100px;
 }
 
 
 .nav-links li a {
-   color: rgb(255, 255, 255);
-   text-decoration: none;
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  font-size: 22px;
 }
 
-.nav-links li a:hover{
-  color: #5c4900;
-  font-weight: bold;
-  text-decoration: underline;
+.nav-links li a:hover {
+  color: black;
+  font-size: 30px;
+  font-style: initial;
 }
 
-
-.content {
-   margin-top: 100px; 
-}
+/*  menu ate aqui */
 
 
-.nav-links {
-   list-style: none;
-   padding: 0;
-   margin: 0;
-}
 
-
-.nav-links li {
-   display: inline;
-   margin-right: 100px;
+.main {
+  display: flex;
+  flex: 1;
+  width: 100%;
 }
 
 
+.container {
+  background: url("https://www.xpand-it.com/wp-content/uploads/2022/08/Artificial-intelligence_blog.png") no-repeat center center fixed;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.frase-1 {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: rgb(255, 255, 255);
+  font-size: 45px;
+  text-align: center;
+  margin-top: 50px;
+}
+
+.frase-2 {
+  font-family: cursive;
+  color: white;
+  font-size: 32px;
+  text-align: center;
+  margin-top: 25px;
+}
+
+.duração, .pq {
+  width: 50%;
+  margin: 0 auto;
+  text-align: center;
+  padding: 20px;
+  border: 2px solid #000;
+  border-radius: 10px;
+  margin-top: 20px; 
+  margin-bottom: 20px; 
+}
+
+.quadrados-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+
+.quadrado {
+  width: calc(33.33% - 10px);
+  height: 250px;
+  background-color: rgb(19, 18, 18);
+  margin-right: 30px;
+  margin-left: 30px; 
+  padding: 30px;
+  color: rgb(255, 241, 241);
+}
+
+/*rodape*/
+footer {
+  width: 100%;
+  color: var(--color-neutral-40);
+  position: relative;
+  margin-top: 20px;
+}
 
 :root {
-    --color-neutral-0: #130d0d;
-    --color-neutral-10: #2b42c463;
-    --color-neutral-30: #0e0d0c;
-    --color-neutral-40: #0f0c0c;
+  --color-neutral-0: #0e0c0c;
+  --color-neutral-10: #171717;
+  --color-neutral-30: #fff8f8;
+  --color-neutral-40: #f5f5f5;
 
-}
-
-* {
-    font-family: 'Inter', sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    letter-spacing: 1px;
-}
-
-main {
-    height: 80vh;
-}
-
-footer {
-    width: 100%;
-    color: var(--color-neutral-40);
 }
 
 .footer-link {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 #footer_content {
-    background-color: var(--color-neutral-10);
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    padding: 3rem 3.5rem;
+  background-color: var(--color-neutral-10);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 3rem 3.5rem;
 }
 
 #footer_contacts h1 {
-    margin-bottom: 0.75rem;
+  margin-bottom: 0.75rem;
 }
 
 #footer_social_media {
-    display: flex;
-    gap: 2rem;
-    margin-top: 1.5rem;
-} 
+  display: flex;
+  gap: 2rem;
+  margin-top: 1.5rem;
+}
 
 #footer_social_media .footer-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 2.5rem;
-    width: 2.5rem;
-    color: var(--color-neutral-40);
-    border-radius: 50%;
-    transition: all 0.4s;
+  display: flex;
+  width: 2.5rem;
+  color: var(--color-neutral-40);
+  border-radius: 50%;
+  transition: all 0.4s;
 }
 
 #footer_social_media .footer-link i {
-    font-size: 1.25rem;    
+  font-size: 1.25rem;
 }
 
 #footer_social_media .footer-link:hover {
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
-#instagram {
-    background: linear-gradient(#453277, #ff2992, #ff9807);
+#instagram {;
+  background: linear-gradient(#7f37c9, #ff2992, #ff9807);
 }
 
 #facebook {
-    background-color: #1e1e9e;
+  background-color: #4267b3;
 }
 
-#whatsapp {
-    background-color: #25d366;
-}
-
-.footer-list {
-    display: flex;
-    flex-direction: column;
-    gap: 0.75rem;
-    list-style: none;
+#whatsapp {https://img.freepik.com/fotos-gratis/jovem-empresario-olhando-para-monitor-de-computador-com-graficos-analisando-informacoes-estatisticas-e-dados-para-criar-relatorio-de-projeto-fazendo-pesquisa-financeira-tela-do-pc-com-apresentacao-de-rede_482257-46960.jpg
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  list-style: none;
 }
 
 .footer-list .footer-link {
-    color: var(--color-neutral-30);
-    transition: all 0.4s;
+  color: var(--color-neutral-30);
+  transition: all 0.4s;
 }
 
 .footer-list .footer-link:hover {
-    color: #1a161f;
-}
-
-#footer_subscribe {
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
+  color: #7f37c9;
 }
 
 #footer_subscribe p {
-    color: var(--color-neutral-30);
+  color: var(--color-neutral-30);
 }
 
 #input_group {
-    display: flex;
-    align-items: center;
-    background-color: var(--color-neutral-0);
-    border-radius: 4px;
+  display: flex;
+  align-items: center;
+  background-color: var(--color-neutral-0);
+  border-radius: 4px;
 }
 
 #input_group input {
-    all: unset;
-    padding: 0.75rem;
-    width: 100%;
+  all: unset;
+  padding: 0.75rem;
+  width: 100%;
 }
 
 #input_group button {
-    background-color: #7f37c9;
-    border: none;
-    color: var(--color-neutral-40);
-    padding: 0px 1.25rem;
-    font-size: 1.125rem;
-    height: 100%;
-    border-radius: 0px 4px 4px 0px;
-    cursor: pointer;
-    transition: all 0.4s;
+  background-color: #7f37c9;
+  border: none;
+  color: var(--color-neutral-40);
+  padding: 0px 1.25rem;
+  font-size: 1.125rem;
+  height: 100%;
+  border-radius: 0px 4px 4px 0px;
+  cursor: pointer;
+  transition: all 0.4s;
 }
 
 #input_group button:hover {
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
 #footer_copyright {
-    display: flex;
-    justify-content: center;
-    background-color: var(--color-neutral-0);
-    font-size: 0.9rem;
-    padding: 1.5rem;
-    font-weight: 100;
+  display: flex;
+  justify-content: center;
+  background-color: var(--color-neutral-0);
+  font-size: 0.9rem;
+  padding: 1.5rem;
+  font-weight: 100;
 }
 
 @media screen and (max-width: 768px) {
-    #footer_content {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 2rem;
-    }
-}
-
-@media screen and (max-width: 426px) {
-    #footer_content {
-        grid-template-columns: repeat(1, 1fr);
-        padding: 3rem 2rem;
-    }
+  #footer_content {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+  }
 }
